--- a/Hangman.ipynb
+++ b/Hangman.ipynb
@@ -1,30 +1,15 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Hangman.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "id": "zDT1DRkbs8MO"
       },
+      "outputs": [],
       "source": [
         "import random "
-      ],
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -37,9 +22,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "id": "j50qAxhatq9S"
       },
+      "outputs": [],
       "source": [
         "Themes = {\n",
         "    \"history\": [\n",
@@ -64,15 +51,15 @@
         "        \"stroke\"\n",
         "    ]\n",
         "}"
-      ],
-      "execution_count": 58,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "id": "CuqJUAHKvVnQ"
       },
+      "outputs": [],
       "source": [
         "\n",
         "## You can use this function to get the keys in your dictionary for which you want to use as a theme \n",
@@ -83,12 +70,11 @@
         "        if i == n:\n",
         "            return key\n",
         "    raise IndexError(\"dictionary index out of range\") "
-      ],
-      "execution_count": 14,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -97,30 +83,25 @@
         "id": "btOETPFbv1Q2",
         "outputId": "1de466bb-bb10-4cad-806f-5cfb95d833e7"
       },
-      "source": [
-        "get_nth_key(Themes,n=random.randint(1,len(Themes))-1) # Choose at random which theme you want to use as a hint for the user. "
-      ],
-      "execution_count": 61,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
-              "'computers'"
+              "'history'"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 61
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "get_nth_key(Themes,n=random.randint(1,len(Themes))-1) # Choose at random which theme you want to use as a hint for the user. "
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -129,33 +110,29 @@
         "id": "A-ZxLMvKFkHN",
         "outputId": "29cc5362-f54b-4f1c-b69f-314bed2f03b8"
       },
-      "source": [
-        "random.choice(Themes[get_nth_key(Themes)]) # Use indexing to identify the masked word as shown. "
-      ],
-      "execution_count": 68,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
               "'Mesopotamia'"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 68
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "random.choice(Themes[get_nth_key(Themes)]) # Use indexing to identify the masked word as shown. "
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
       "metadata": {
         "id": "jP5-6x_9Gthj"
       },
+      "outputs": [],
       "source": [
         "# Use the above to define you get word function. \n",
         "\n",
@@ -163,15 +140,15 @@
         "  ############\n",
         "  ############\n",
         "  return word.lower()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
       "metadata": {
         "id": "-APRiZ52wNhg"
       },
+      "outputs": [],
       "source": [
         "###### Define your Play function with necessary lists containing the character and full word guessess. \n",
         "def play(word):\n",
@@ -179,7 +156,7 @@
         "    \n",
         "    # Define your lists with guessed characters and words here. \n",
         "    # Ensure you print the attempts remaining\n",
-        "      while not fully_guessed and attempts > 0:\n",
+        "    while not fully_guessed and attempts > 0:\n",
         "        guessed = input(\"Please guess a letter  \")\n",
         "\n",
         "        # Define your rules here. Use a combination of conditionals and  string formating to combine your final guess into a word. \n",
@@ -190,12 +167,11 @@
         "\n",
         "\n",
         "\n"
-      ],
-      "execution_count": 32,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -204,27 +180,46 @@
         "id": "OnwbvYHnDagB",
         "outputId": "69823ba2-bfbe-444d-c6dc-2a2f4bcfca66"
       },
-      "source": [
-        "guessed('chris')"
-      ],
-      "execution_count": 52,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'*****'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 52
+          "ename": "NameError",
+          "evalue": "name 'guessed' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mguessed\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchris\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'guessed' is not defined"
+          ]
         }
+      ],
+      "source": [
+        "guessed('chris')"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Hangman.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
